empiezan cambios de color

--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MySPA</title>
-    <link rel="sheet icon" href="assets/svg/accusoft-brands.svg">
+    <link rel="sheet icon" href="assets/svg/MySPA-simple-logo.svg">
     <link rel="stylesheet" type="text/css" href="style/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/estilos.css">
     <link rel="stylesheet" href="style/font_awesome_5_15_3/css/all.css">
@@ -13,9 +13,11 @@
 </head>
 <body>
     <main class="container" id="start-session">
+        <div class="container-logo">
+            <img src="assets/svg/MySPA-logo.svg" alt="logo MySPA">
+        </div>
         <div class="row m-0 p-0 login-container">
-            <h1><i class="fab fa-accusoft"></i>MySPA</h1>
-            <form action="" id="login" class="login col-10 col-sm-6 col-lg-3 p-5">
+            <form action="" id="login" class="login col-10 col-sm-6 col-lg-4 col-xxl-3 p-5">
                 <h1 class="mb-5 text-center">Iniciar Sesión</h1>
                 <div class="col-12 mb-4">
                     <label for="username" class="visually-hidden">Password</label>
