--- a/web/main.html
+++ b/web/main.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" type="text/css" href="style/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/estilos.css">
     <link rel="stylesheet" href="style/font_awesome_5_15_3/css/all.css">
-    <link rel="sheet icon" href="assets/svg/accusoft-brands.svg">
+    <link rel="sheet icon" href="assets/svg/MySPA-simple-logo.svg">
     <script src="https://kit.fontawesome.com/1ff815ef1d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style/sweetalert2/sweetalert2.min.css">
     
 </head>
 <body>
     <header class="row header fixed-top">
-        <nav class="navbar navbar-expand-xl col-12 col-xxl-8 m-auto">
+        <nav class="navbar navbar-expand-xl col-12 m-auto">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <i class="fab fa-accusoft icon-little"></i>
+                    <img src="assets/svg/MySPA-simple-logo.svg" style="width: 50px;" alt="">
                     <span class="d-sm-none d-xl-inline-block">MySPA</span>
                 </a>
                 <button class="navbar-toggler icon-menu" type="button" data-bs-toggle="collapse"
@@ -28,37 +28,37 @@
                     <i class="fas fa-bars icon-little"></i>
                 </button>
                 <div class="collapse navbar-collapse text-center" id="navbarNav">
-                    <ul class="navbar-nav col-xl-8 col-xxl-9">
+                    <ul class="navbar-nav col-xl-10 col-xxl-9">
                         <li class="nav-item">
-                            <a class="nav-link active" href="pages/producto/producto.html" id="producto">Productos</a>
+                            <a class="nav-link active" href="pages/producto/producto.html" id="producto"><i class="fas fa-cart-plus"></i> Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/cliente/cliente.html">Clientes</a>
+                            <a class="nav-link" href="pages/cliente/cliente.html"><i class="fas fa-user-friends"></i> Clientes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/empleado/empleado.html">Empleados</a>
+                            <a class="nav-link" href="pages/empleado/empleado.html"><i class="fas fa-people-carry"></i> Empleados</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/sucursal/sucursal.html">Sucursales</a>
+                            <a class="nav-link" href="pages/sucursal/sucursal.html"><i class="fas fa-map-marked-alt"></i> Sucursales</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/sala/sala.html">Salas</a>
+                            <a class="nav-link" href="pages/sala/sala.html"><i class="fas fa-person-booth"></i> Salas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/horario/horario.html">Horarios</a>
+                            <a class="nav-link" href="pages/horario/horario.html"><i class="fas fa-hourglass-start"></i> Horarios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/tratamiento/tratamiento.html">Tratamientos</a>
+                            <a class="nav-link" href="pages/tratamiento/tratamiento.html"><i class="fas fa-leaf"></i> Tratamientos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/reservacion/reservacion.html">Reservaciones</a>
+                            <a class="nav-link" href="pages/reservacion/reservacion.html"><i class="fas fa-hotel"></i> Reservaciones</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/servicio/servicio.html">Servicios</a>
+                            <a class="nav-link" href="pages/servicio/servicio.html"><i class="fas fa-concierge-bell"></i> Servicios</a>
                         </li>
                     </ul>
                     <div class="separador d-lx-none"></div>
-                    <div class="navbar-nav  col-xl-2 offset-xl-1">
+                    <div class="navbar-nav  col-xl-2 offset-xxl-1">
                         <li class="nav-item">
                             <a class="nav-link">
                                 <span>Mi Cuenta</span>
@@ -71,7 +71,7 @@
         </nav>
     </header>
     <main class="container-fluid">
-        <section class="row col-12 col-xxl-8 m-auto" id="main-content">
+        <section class="row" id="main-content">
 
         </section>
     </main>
