--- a/web/pages/servicio/servicio.html
+++ b/web/pages/servicio/servicio.html
@@ -1,9 +1,9 @@
-<article class="row col-12 m-auto mb-3">
-    <figure class="figure mt-3 banner-top">
+<article class="row col-12 m-0 p-0 mb-3">
+    <figure class="figure mt-3 banner-top m-0 p-0">
         <div>
             <span></span>
             <img src="assets/images/banner-tratamientos.png" class="img-fluid" alt="productos de spa">
-            <figcaption class="figure-caption align-self-center">Servicios</figcaption>
+            <figcaption class="figure-caption align-self-center fs-1">Servicios</figcaption>
         </div>
     </figure>
 </article>
