--- a/web/pages/empleado/empleado.html
+++ b/web/pages/empleado/empleado.html
@@ -1,4 +1,4 @@
-<article class="row col-12 m-0 p-0 mb-3">
+<article class="row col-12 m-0 p-0 mb-3 mt-sm-0 mt-lg-1 mt-xxl-0">
     <figure class="figure mt-3 banner-top m-0 p-0">
         <div>
             <span></span>
@@ -114,7 +114,7 @@
 <div class="col-12 mt-5 mt-xl-3 px-3 px-xl-4">
     <div class="row mb-3 m-0 p-0">
         <div class="col-2">
-            <button class="btn btn-success w-100 btn-new"><i class="fas fa-plus"></i></button>
+            <button class="btn btn-success w-100 btn-new"><i class="fas fa-file-alt"></i> Nuevo</button>
         </div>
         <div class="col-3 col-xl-5 d-flex justify-content-end">
             <div class="form-check form-switch pt-2">
