--- a/web/pages/producto/producto.html
+++ b/web/pages/producto/producto.html
@@ -1,4 +1,4 @@
-<article class="row col-12 p-0 m-0 mb-3">
+<article class="row col-12 p-0 m-0 mb-3 mt-sm-0 mt-lg-1 mt-xxl-0">
     <figure class="figure mt-3 banner-top m-0 p-0">
         <div>
             <span></span>
