--- a/web/pages/empleado/empleado.html
+++ b/web/pages/empleado/empleado.html
@@ -9,25 +9,25 @@
 </article>
 
 <article class="main-modal col-8">
-    <form action="" class="form formulario col-10 col-xxl-6 p-1 p-sm-3 p-xxl-5">
+    <form action="" class="form formulario col-11 col-lg-8 col-xxl-6 p-3 p-xl-5">
         <div class="row p-0 m-0">
             <h2 class="mb-4 title-form">Nuevo Empleado</h2>
-            <div class="form-floating mb-3 col-2">
+            <div class="form-floating mb-3 col-4 col-sm-2">
                 <input type="text" class="form-control" name="id" id="id" placeholder="example"
                     autocomplete="off" required>
                 <label for="name" class="mx-3">Id</label>
             </div>
-            <div class="form-floating mb-3 col-4">
+            <div class="form-floating mb-3 col-8 col-sm-4">
                 <input type="text" class="form-control" name="name" id="name" placeholder="example"
                     autocomplete="off" required>
                 <label for="name" class="mx-3">Nombre</label>
             </div>
-            <div class="form-floating mb-3 col-3">
+            <div class="form-floating mb-3 col-6 col-sm-3">
                 <input type="text" class="form-control" name="last_pa" id="last_pa" placeholder="example"
                 autocomplete="off" required>
                 <label for="last-pa" class="mx-3">Apellido Paterno</label>
             </div>
-            <div class="form-floating mb-3 col-3">
+            <div class="form-floating mb-3 col-6 col-sm-3">
                 <input type="text" class="form-control" name="last_ma" id="last_ma" placeholder="example"
                 autocomplete="off" required>
                 <label for="last-ma" class="mx-3">Apellido Materno</label>
@@ -68,39 +68,39 @@
                     </label>
                 </div>
             </div>
-            <div class="form-floating mb-3 col-4">
+            <div class="form-floating mb-3 col-6 col-sm-4">
                 <input type="text" class="form-control" name="jobposition" id="jobposition" placeholder="example"
                     autocomplete="off" required>
                 <label for="position" class="mx-3">Puesto</label>
             </div>
-            <div class="form-floating mb-3 col-3">
+            <div class="form-floating mb-3 col-6 col-sm-3">
                 <input type="text" class="form-control" name="photo" id="photo" placeholder="example"
                     autocomplete="off" required>
                 <label for="photo" class="mx-3">Foto</label>
             </div>
-            <div class="form-floating mb-3 col-5">
+            <div class="form-floating mb-3 col-7 col-sm-5">
                 <input type="text" class="form-control" name="url" id="url" placeholder="example"
                     autocomplete="off" required>
                 <label for="photo" class="mx-3">URL Foto</label>
             </div>
-            <div class="form-floating mb-3 col-4">
+            <div class="form-floating mb-3 col-5 col-sm-4">
                 <input type="text" class="form-control" name="user" id="user" placeholder="example"
                 autocomplete="off" required>
                 <label for="user" class="mx-3">Usuario</label>
             </div>
-            <div class="form-floating mb-3 col-4">
+            <div class="form-floating mb-3 col-6 col-sm-4">
                 <input type="password" class="form-control" name="password" id="password" placeholder="example"
                 autocomplete="off" required>
                 <label for="password" class="mx-3">Contraseña</label>
             </div>
-            <div class="form-floating mb-3 col-4">
+            <div class="form-floating mb-3 col-6 col-sm-4">
                 <input type="password" class="form-control" name="password_confirm" id="password_confirm" placeholder="example"
                 autocomplete="off" required>
                 <label for="password" class="mx-3">Cofirmar Contraseña</label>
             </div>
             <input type="hidden" name="position" id="position" value="">
             <input type="hidden" name="action" id="action" value="CREATE">
-            <div class="row col-8 m-auto p-0">
+            <div class="row col-12 col-sm-8 m-auto p-0">
                 <div class="col-6">
                     <input type="submit" class="btn btn-dark w-100" name="btn-submit" value="Crear">
                 </div>
@@ -113,21 +113,8 @@
 </article>
 <div class="col-12 mt-5 mt-xl-3 px-3 px-xl-4">
     <div class="row mb-3 m-0 p-0">
-        <div class="col-2">
+        <div class="col-5 col-sm-3 col-xl-2">
             <button class="btn btn-success w-100 btn-new"><i class="fas fa-file-alt"></i> Nuevo</button>
-        </div>
-        <div class="col-3 col-xl-5 d-flex justify-content-end">
-            <div class="form-check form-switch pt-2">
-                <input class="form-check-input" type="checkbox" id="status" checked>
-                <label class="form-check-label" for="status">Estatus</label>
-            </div>
-        </div>
-        <div class="d-flex bd-highlight col-7 col-xl-5 p-0 m-0">
-            <select name="type" id="options" class="form-select w-50 me-3">
-                <option value="name">Nombre</option>
-                <option value="id">id</option>
-            </select>
-            <input class="form-control search-elements" type="search" placeholder="Buscar" aria-label="Buscar">
         </div>
     </div>
     <div class="row scrollbar p-0 m-0 mb-5 mb-lg-0">
