--- a/web/pages/sala/sala.html
+++ b/web/pages/sala/sala.html
@@ -1,88 +1,84 @@
-<article class="row col-12 m-auto mb-3">
-    <figure class="figure mt-3 banner-top">
+<article class="row col-12 p-0 m-0 mb-3 mt-sm-0 mt-lg-1 mt-xxl-0">
+    <figure class="figure mt-3 banner-top m-0 p-0">
         <div>
             <span></span>
             <img src="assets/images/banner-tratamientos.png" class="img-fluid" alt="productos de spa">
-            <figcaption class="figure-caption align-self-center">Salas</figcaption>
+            <figcaption class="figure-caption align-self-center fs-1">Salas</figcaption>
         </div>
     </figure>
 </article>
 
-<article class="col-8 col-lg-4 m-lg-0 m-auto">
-    <form action="" class="form formulario p-5 p-lg-3">
-        <h2 class="mb-5 title-form">Nueva Sala</h2>
-        <label for="id" class="mb-3"></label>
-        <figure class="figure">
-            <img src="" id="url-photo" class="figure-img img-fluid rounded" alt="Sala Spa">
-        </figure>
-        <div class="form-floating mb-3">
-            <input type="text" class="form-control" name="name" id="name" placeholder="example" autocomplete="off" required>
-            <label for="name">Nombre</label>
-        </div>
-        <div class="form-floating mb-3">
-            <input type="text" class="form-control" name="description" id="description" placeholder="example" autocomplete="off" reaquired>
-            <label for="description">Descripción</label>
-        </div>
-        <div class="form-floating mb-3">
-            <input type="text" class="form-control" name="photo" id="photo" placeholder="example" autocomplete="off" required>
-            <label for="photo">Foto</label>
-        </div>
-        <div class="input-group mb-3">
-            <input type="file" class="form-control" id="inputPhoto" aria-describedby="inputPhoto" aria-label="Subir">
-            <button class="btn btn-outline-secondary" type="button" id="inputPhoto">Subir</button>
-        </div>
-        <div class="form-floating mb-3">
-            <input type="text" class="form-control" name="sucursal_id" id="sucursal_id" placeholder="example" autocomplete="off" required>
-            <label for="sucursal_id">Id Sucursal</label>
-        </div>
-        <div class="form-check form-switch mb-5 px-5">
-            <input class="form-check-input" type="checkbox" id="status" name="status" checked>
-            <label class="form-check-label" for="status">Estatus</label>
-        </div>
-        <input type="hidden" name="id" id="id" value="">
-        <div class="row col-12 m-0 p-0">
-            <div class="col-6">
-                <input type="submit" class="btn btn-dark w-100" name="btn-submit" value="Crear">
+<article class="main-modal col-8">
+    <form action="" class="form formulario col-11 col-sm-6 col-xxl-4 p-3 p-xl-5">
+        <div class="row p-0 m-0">
+            <h2 class="mb-3 title-form">Nueva Sala</h2>
+            <label for="id" class="mb-3"></label>
+            <div class="form-floating mb-3 col-4 col-sm-3">
+                <input type="text" class="form-control" name="id" id="id" placeholder="example" autocomplete="off"
+                    required>
+                <label for="id" class="mx-3">Id</label>
             </div>
-            <div class="col-6">
-                <a class="btn btn-danger cancelar w-100">Limpiar</a>
+            <div class="form-floating mb-3 col-8 col-sm-9">
+                <input type="text" class="form-control" name="name" id="name" placeholder="example" autocomplete="off" required>
+                <label for="name" class="mx-3">Nombre</label>
+            </div>
+            <div class="form-floating mb-3 col-12">
+                <input type="text" class="form-control" name="description" id="description" placeholder="example" autocomplete="off" reaquired>
+                <label for="description" class="mx-3">Descripción</label>
+            </div>
+            <div class="form-floating mb-3 col-8">
+                <input type="text" class="form-control" name="photo" id="photo" placeholder="example" autocomplete="off" required>
+                <label for="photo" class="mx-3">Foto</label>
+            </div>
+            <div class="form-floating mb-3 col-4">
+                <input type="text" class="form-control" name="sucursal_id" id="sucursal_id" placeholder="example" autocomplete="off" required>
+                <label for="sucursal_id" class="mx-3">Sucursal</label>
+            </div>
+            <div class="form-floating mb-3 col-12">
+                <input type="text" class="form-control" name="url" id="url" placeholder="example"
+                    autocomplete="off" required>
+                <label for="photo" class="mx-3">URL Foto</label>
+            </div>
+            <input type="hidden" name="position" id="position" value="">
+            <input type="hidden" name="action" id="action" value="">
+            <div class="row col-12 m-0 p-0">
+                <div class="col-6">
+                    <input type="submit" class="btn w-100" name="btn-submit" value="Crear">
+                </div>
+                <div class="col-6">
+                    <a class="btn cancelar w-100">Cancelar</a>
+                </div>
             </div>
         </div>
     </form>
 </article>
-<div class="col-12 col-lg-8 mt-5 mt-lg-0">
-    <div class="row mb-3 m-0 p-0 px-3">
-        <div class="d-flex offset-5 col-7 p-0">
-            <select name="type" id="" class="form-select w-50 me-3">
-                <option value="">buscar por</option>
-                <option value="id">id</option>
-                <option value="name">Nombre</option>
-                <option value="brand">Marca</option>
-            </select>
-            <input class="form-control me-3" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success">Search</button>
-
+<div class="col-12 mt-5 mt-xl-3 px-3 px-xl-4">
+    <div class="row mb-3 m-0 p-0">
+        <div class="col-5 col-sm-3 col-xl-2 d-flex justify-content-start">
+            <button class="btn w-100 btn-new"><i class="fas fa-file-alt"></i> Nuevo</button>
         </div>
     </div>
-    <table class="table table-theme table-striped">
-        <thead>
-            <tr>
-                <th>Image</th>
-                <th>#</th>
-                <th>Nombre</th>
-                <th>Descripción</th>
-                <th>Foto</th>
-                <th>id Sucursal</th>
-                <th>Estatus</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+    <div class="row scrollbar p-0 m-0 mb-5 mb-lg-0">
+        <table class="table table-medium table-theme table-striped">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>#</th>
+                    <th>Nombre</th>
+                    <th>Descripción</th>
+                    <th>Foto</th>
+                    <th>id Sucursal</th>
+                    <th>Estatus</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
 </div>
-<template id="templ-producto">
-    <tr>
-        <td class="url-photo"></td>
+<template id="templ-sala">
+    <tr class="fila large-fila">
+        <td><img class="url" src="" alt=""></td>
         <td class="id"></td>
         <td class="name"></td>
         <td class="description"></td>
@@ -90,10 +86,10 @@
         <td class="sucursal_id"></td>
         <td class="status"></td>
         <td>
-            <button class="update btn btn-primary">
+            <button class="update btn">
                 <i class="fas fa-edit"></i>
             </button>
-            <button class="delete delete btn btn-danger">
+            <button class="delete delete btn">
                 <i class="fas fa-trash-alt"></i>
             </button>
         </td>
